        Reviewed by Maciej.

http://bugs.webkit.org/show_bug.cgi?id=12062
        WebCore does not handle CSS-specified fill fallback correctly

        Implement fallback for fill and stroke.



Canonical link: https://commits.webkit.org/20404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26414 268f45cc-cd09-0410-ab3c-d52691b4dbfc